--- a/changelog.html
+++ b/changelog.html
@@ -3,40 +3,112 @@ layout: default
 title: Changelog
 ---
 
-<div class="max-w-3xl mx-auto px-4 py-12">
-  <h1 class="text-3xl md:text-4xl font-semibold tracking-tight">Changelog</h1>
-  <p class="mt-2 text-gray-600 dark:text-gray-300">
-    All releases, newest first.
-  </p>
+<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-16 fade-in">
+  <div class="mb-12 border-b border-white/10 pb-8">
+    <h1 class="text-4xl font-bold text-[#f9fafb] mb-4">Changelog</h1>
+    <p class="text-lg text-gray-400">A timeline of our journey.</p>
+  </div>
 
-  <div class="mt-10 space-y-10">
-    {% for post in site.posts %} {% assign badge_class = 'bg-emerald-600/20
-    text-emerald-300 border-emerald-500/30' %} {% if post.type == 'major' %} {%
-    assign badge_class = 'bg-blue-600/20 text-blue-300 border-blue-500/30' %} {%
-    endif %}
+  <div class="space-y-12">
+    {% for post in site.posts %} {% if post.version %}
+    <div class="relative pl-8 md:pl-0">
+      <!-- Timeline Line -->
+      <div
+        class="hidden md:block absolute left-[149px] top-2 bottom-[-48px] w-0.5 bg-white/10 last:bottom-0"
+      ></div>
 
-    <article
-      class="rounded-xl border border-gray-200 dark:border-gray-700 bg-white/60 dark:bg-gray-800/40 p-6"
-    >
-      <div class="flex flex-wrap items-center justify-between gap-3">
-        <div>
-          <div class="text-sm text-gray-600 dark:text-gray-300">
-            {{ post.date | date: "%B %d, %Y" }}
+      <div class="md:flex gap-12 group">
+        <!-- Left Column: Version & Metadata -->
+        <div
+          class="md:w-32 flex-shrink-0 flex flex-col items-end text-right relative"
+        >
+          <!-- Dot -->
+          <div
+            class="hidden md:block absolute -right-[21px] top-2 w-3 h-3 rounded-full border-2 border-[#131314] ring-2 ring-[#2a9d8f] bg-[#2a9d8f] group-hover:scale-125 transition-transform z-10"
+          ></div>
+
+          <div class="text-xl font-bold text-[#f9fafb]">{{ post.version }}</div>
+          <div class="text-sm text-gray-500 mt-1">
+            {{ post.date | date: "%b %d, %Y" }}
           </div>
-          <h2 class="mt-1 text-xl font-semibold">{{ post.title }}</h2>
+
+          <!-- Badge Logic -->
+          <span
+            class="mt-2 px-2 py-0.5 rounded text-xs font-medium uppercase border {% if post.release_type == 'major' %}bg-[#7c3aed]/10 text-[#7c3aed] border-[#7c3aed]/20 {% elsif post.release_type == 'hotfix' %}bg-red-500/10 text-red-500 border-red-500/20 {% else %}bg-white/10 text-gray-400 border-white/20{% endif %}"
+          >
+            {{ post.release_type }}
+          </span>
         </div>
 
-        {% if post.version %}
-        <span
-          class="inline-flex items-center gap-2 rounded-full border px-3 py-1 text-sm {{ badge_class }}"
+        <!-- Right Column: Content -->
+        <div
+          class="flex-1 bg-[#1e1f20] p-6 rounded-2xl border border-white/5 shadow-sm hover:shadow-md transition-shadow"
         >
-          v{{ post.version }}
-        </span>
-        {% endif %}
-      </div>
+          <div
+            class="flex justify-between items-start mb-4 pb-4 border-b border-white/10"
+          >
+            <div>
+              <span
+                class="text-xs font-bold text-gray-500 uppercase tracking-wider"
+                >Update Focus</span
+              >
+              <div class="font-semibold text-[#f9fafb]">{{ post.title }}</div>
+            </div>
+            <a
+              href="{{ post.url }}"
+              class="text-sm text-[#2a9d8f] font-semibold hover:underline flex items-center"
+            >
+              Read notes <i data-lucide="arrow-right" class="w-3 h-3 ml-1"></i>
+            </a>
+          </div>
 
-      <div class="mt-6 prose dark:prose-invert">{{ post.content }}</div>
-    </article>
-    {% endfor %}
+          <!-- LOGIC: Check for Groups first, then Flat items -->
+          {% if post.changelog_groups %}
+          <div class="space-y-5">
+            {% for group in post.changelog_groups %}
+            <div>
+              <h4
+                class="font-bold text-gray-500 text-xs uppercase tracking-wider mb-2"
+              >
+                {{ group.name }}
+              </h4>
+              <ul class="space-y-2 m-0 p-0 list-none">
+                {% for item in group.items %}
+                <li class="flex items-start text-[#f9fafb]/80 text-sm">
+                  <div
+                    class="w-1.5 h-1.5 rounded-full bg-[#2a9d8f] mt-2 mr-3 flex-shrink-0"
+                  ></div>
+                  <span class="leading-relaxed"
+                    >{{ item | markdownify | remove: '
+                    <p>' | remove: '</p>
+                    ' }}</span
+                  >
+                </li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% endfor %}
+          </div>
+
+          {% elsif post.changelog_items %}
+          <ul class="space-y-2 m-0 p-0 list-none">
+            {% for item in post.changelog_items %}
+            <li class="flex items-start text-[#f9fafb]/80 text-sm">
+              <div
+                class="w-1.5 h-1.5 rounded-full bg-[#2a9d8f] mt-2 mr-3 flex-shrink-0"
+              ></div>
+              <span class="leading-relaxed"
+                >{{ item | markdownify | remove: '
+                <p>' | remove: '</p>
+                ' }}</span
+              >
+            </li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% endif %} {% endfor %}
   </div>
 </div>
