--- a/index.html
+++ b/index.html
@@ -3,105 +3,87 @@ layout: default
 title: Home
 ---
 
-<section class="max-w-6xl mx-auto px-4 py-16">
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-    <div>
-      <p class="text-sm font-semibold tracking-wide text-accent uppercase">
-        Google Sheets Add-on
-      </p>
-      <h1 class="mt-4 text-4xl md:text-5xl font-semibold tracking-tight">
-        Excel at Parenting.
-        <span class="block text-primary"
-          >Stay calm, organized, and consistent.</span
-        >
-      </h1>
-      <p class="mt-6 text-lg text-gray-600 dark:text-gray-300">
-        {{ site.description }}
-      </p>
-      <div class="mt-8 flex flex-wrap gap-4" id="purchase">
-        <a
-          href="#"
-          class="inline-flex items-center justify-center rounded-lg bg-secondary text-white px-5 py-3 font-medium hover:opacity-90 transition-opacity"
-        >
-          Purchase
-        </a>
-        <a
-          href="{{ '/updates.html' | relative_url }}"
-          class="inline-flex items-center justify-center rounded-lg border border-gray-200 dark:border-gray-700 px-5 py-3 font-medium hover:border-primary hover:text-primary transition-colors"
-        >
-          See what’s new
-        </a>
-      </div>
-    </div>
-
+<!-- Hero Section -->
+<section class="relative pt-20 pb-32 overflow-hidden fade-in">
+  <div
+    class="absolute inset-0 bg-gradient-to-br from-brand-teal/20 to-brand-purple/20 -z-10"
+  ></div>
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
     <div
-      class="rounded-2xl border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 p-8"
+      class="inline-flex items-center px-4 py-2 rounded-full bg-brand-teal/20 text-brand-teal text-sm font-medium mb-8"
     >
-      <div class="text-sm text-gray-600 dark:text-gray-300">
-        Built for real-world co-parenting
-      </div>
-      <ul class="mt-4 space-y-3 text-gray-700 dark:text-gray-200">
-        <li class="flex gap-3">
-          <i class="fa-solid fa-check text-primary mt-1"></i>
-          <span>Keep a clean record of schedules, expenses, and notes.</span>
-        </li>
-        <li class="flex gap-3">
-          <i class="fa-solid fa-check text-primary mt-1"></i>
-          <span>Stay aligned with clear, shareable updates.</span>
-        </li>
-        <li class="flex gap-3">
-          <i class="fa-solid fa-check text-primary mt-1"></i>
-          <span>Reduce conflict by making decisions transparent.</span>
-        </li>
-      </ul>
+      <i data-lucide="star" class="w-4 h-4 mr-2 text-brand-teal"></i> Voted #1
+      App for Co-parenting
+    </div>
+    <h1
+      class="text-5xl md:text-6xl font-extrabold text-off-white tracking-tight mb-6"
+    >
+      Your Truth. <br class="hidden md:block" />
+      <span
+        class="text-transparent bg-clip-text bg-gradient-to-r from-brand-teal to-brand-purple"
+        >Secured.</span
+      >
+    </h1>
+    <p class="max-w-2xl mx-auto text-xl text-gray-300 mb-10">
+      Track custody schedules, shared expenses, and communicate peacefully. One
+      app to keep your child's world turning smoothly.
+    </p>
+    <div class="flex flex-col sm:flex-row justify-center gap-4">
+      <button
+        class="bg-brand-teal text-off-white px-8 py-4 rounded-xl font-bold text-lg shadow-xl hover:bg-brand-teal/90 transition-all flex items-center justify-center gap-2"
+      >
+        Download Free <i data-lucide="arrow-right" class="w-5 h-5"></i>
+      </button>
     </div>
   </div>
 </section>
 
-<section class="max-w-6xl mx-auto px-4 pb-20">
-  <h2 class="text-2xl md:text-3xl font-semibold tracking-tight">
-    What you get
-  </h2>
-  <p class="mt-2 text-gray-600 dark:text-gray-300 max-w-2xl">
-    A simple system that makes documentation effortless and consistent.
-  </p>
-
-  <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div
-      class="rounded-xl bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 p-6"
-    >
-      <div class="text-primary text-xl">
-        <i class="fa-solid fa-calendar-days"></i>
+<!-- Features Section -->
+<section class="py-24 bg-charcoal">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- Feature 1 -->
+      <div
+        class="p-8 rounded-2xl bg-gray-800 hover:bg-gray-700 transition-colors border border-gray-700 group"
+      >
+        <div
+          class="w-14 h-14 bg-gray-700 rounded-xl shadow-sm flex items-center justify-center mb-6 group-hover:scale-110 transition-transform"
+        >
+          <i data-lucide="calendar" class="w-8 h-8 text-brand-teal"></i>
+        </div>
+        <h3 class="text-xl font-bold text-off-white mb-3">Shared Calendar</h3>
+        <p class="text-gray-300 leading-relaxed">
+          Color-coded schedules and swap requests.
+        </p>
       </div>
-      <h3 class="mt-4 font-semibold text-lg">Schedules that stick</h3>
-      <p class="mt-2 text-gray-600 dark:text-gray-300">
-        Track parenting time, swaps, and notes without rebuilding your
-        spreadsheet.
-      </p>
-    </div>
-
-    <div
-      class="rounded-xl bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 p-6"
-    >
-      <div class="text-primary text-xl">
-        <i class="fa-solid fa-receipt"></i>
+      <!-- Feature 2 -->
+      <div
+        class="p-8 rounded-2xl bg-gray-800 hover:bg-gray-700 transition-colors border border-gray-700 group"
+      >
+        <div
+          class="w-14 h-14 bg-gray-700 rounded-xl shadow-sm flex items-center justify-center mb-6 group-hover:scale-110 transition-transform"
+        >
+          <i data-lucide="dollar-sign" class="w-8 h-8 text-brand-purple"></i>
+        </div>
+        <h3 class="text-xl font-bold text-off-white mb-3">Expenses</h3>
+        <p class="text-gray-300 leading-relaxed">
+          Log expenses and upload receipts easily.
+        </p>
       </div>
-      <h3 class="mt-4 font-semibold text-lg">Expense clarity</h3>
-      <p class="mt-2 text-gray-600 dark:text-gray-300">
-        Log reimbursements and keep supporting files organized in one place.
-      </p>
-    </div>
-
-    <div
-      class="rounded-xl bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 p-6"
-    >
-      <div class="text-primary text-xl">
-        <i class="fa-solid fa-shield-heart"></i>
+      <!-- Feature 3 -->
+      <div
+        class="p-8 rounded-2xl bg-gray-800 hover:bg-gray-700 transition-colors border border-gray-700 group"
+      >
+        <div
+          class="w-14 h-14 bg-gray-700 rounded-xl shadow-sm flex items-center justify-center mb-6 group-hover:scale-110 transition-transform"
+        >
+          <i data-lucide="message-circle" class="w-8 h-8 text-brand-teal"></i>
+        </div>
+        <h3 class="text-xl font-bold text-off-white mb-3">Messaging</h3>
+        <p class="text-gray-300 leading-relaxed">
+          Secure, printable communication history.
+        </p>
       </div>
-      <h3 class="mt-4 font-semibold text-lg">Peace of mind</h3>
-      <p class="mt-2 text-gray-600 dark:text-gray-300">
-        A reliable record that helps you communicate with confidence.
-      </p>
     </div>
   </div>
 </section>
