--- a/updates.html
+++ b/updates.html
@@ -1,33 +1,58 @@
 ---
 layout: default
-title: Latest Update
+title: Updates
 ---
 
-{% assign post = site.posts.first %}
-
-<div class="max-w-3xl mx-auto px-4 py-12">
-  {% if post %}
-  <div class="mb-8">
-    <div class="text-sm text-gray-600 dark:text-gray-300">
-      {{ post.date | date: "%B %d, %Y" }}{% if post.version %} &middot; v{{
-      post.version }}{% endif %}
-    </div>
-    <h1 class="mt-2 text-3xl md:text-4xl font-semibold tracking-tight">
-      {{ post.title }}
-    </h1>
+<div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-16 fade-in">
+  <div class="text-center mb-16">
+    <h1 class="text-4xl font-bold text-off-white mb-4">Latest Updates</h1>
+    <p class="text-lg text-gray-300">Release notes and news from the team.</p>
   </div>
 
-  <div class="prose lg:prose-xl dark:prose-invert">{{ post.content }}</div>
-
-  <div class="mt-10">
-    <a
-      href="{{ '/changelog.html' | relative_url }}"
-      class="inline-flex items-center justify-center rounded-lg border border-gray-200 dark:border-gray-700 px-5 py-3 font-medium hover:border-primary hover:text-primary transition-colors"
+  <div class="grid gap-12">
+    {% for post in site.posts %}
+    <article
+      class="bg-gray-800 rounded-2xl shadow-sm border border-gray-700 overflow-hidden hover:shadow-md transition-shadow flex flex-col md:flex-row"
     >
-      See Full History
-    </a>
+      <div
+        class="md:w-1/3 h-48 md:h-auto bg-gray-700 flex items-center justify-center relative overflow-hidden bg-gradient-to-br from-brand-teal/20 to-brand-purple/20"
+      >
+        <div class="relative z-10 p-6 text-center">
+          <span
+            class="inline-block px-3 py-1 bg-gray-600/80 backdrop-blur rounded-full text-xs font-bold text-brand-teal uppercase tracking-wide mb-2"
+          >
+            {{ post.category }}
+          </span>
+          <div class="text-gray-400 text-sm font-medium">
+            {{ post.date | date: "%b %d, %Y" }}
+          </div>
+        </div>
+      </div>
+      <div class="p-8 md:w-2/3 flex flex-col justify-center">
+        <div class="flex items-center gap-3 mb-3">
+          <span
+            class="px-2 py-1 rounded text-xs font-bold bg-gray-700 text-gray-300 border border-gray-600"
+          >
+            {{ post.version }}
+          </span>
+          <h2
+            class="text-2xl font-bold text-off-white hover:text-brand-teal cursor-pointer transition-colors"
+          >
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </h2>
+        </div>
+        <p class="text-gray-300 mb-6 leading-relaxed">
+          {{ post.excerpt | strip_html | truncatewords: 30 }}
+        </p>
+        <a
+          href="{{ post.url }}"
+          class="text-brand-teal font-semibold hover:text-brand-teal/80 flex items-center"
+        >
+          Read Release Notes
+          <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
+        </a>
+      </div>
+    </article>
+    {% endfor %}
   </div>
-  {% else %}
-  <p class="text-gray-600 dark:text-gray-300">No updates yet.</p>
-  {% endif %}
 </div>
