--- a/changelog.html
+++ b/changelog.html
@@ -55,7 +55,7 @@ title: Changelog
               <div class="font-semibold text-[#f9fafb]">{{ post.title }}</div>
             </div>
             <a
-              href="{{ post.url }}"
+              href="{{ post.url | relative_url }}"
               class="text-sm text-[#2a9d8f] font-semibold hover:underline flex items-center"
             >
               Read notes <i data-lucide="arrow-right" class="w-3 h-3 ml-1"></i>
