fix: updates pages for 2.4.1 hotfix - fixes import too slow timeout issue

--- a/updates.html
+++ b/updates.html
@@ -11,7 +11,7 @@ permalink: /
   </div>
 
   <div class="grid gap-12">
-    {% for post in site.posts %}
+    {% for post in site.posts %} {% unless post.release_type == 'hotfix' %}
     <article
       class="bg-gray-800 rounded-2xl shadow-sm border border-gray-700 overflow-hidden hover:shadow-md transition-shadow flex flex-col md:flex-row"
     >
@@ -54,6 +54,6 @@ permalink: /
         </a>
       </div>
     </article>
-    {% endfor %}
+    {% endunless %} {% endfor %}
   </div>
 </div>
