--- a/changelog.html
+++ b/changelog.html
@@ -54,12 +54,14 @@ title: Changelog
               >
               <div class="font-semibold text-[#f9fafb]">{{ post.title }}</div>
             </div>
+            {% unless post.release_type == 'hotfix' %}
             <a
               href="{{ post.url | relative_url }}"
               class="text-sm text-[#2a9d8f] font-semibold hover:underline flex items-center"
             >
               Read notes <i data-lucide="arrow-right" class="w-3 h-3 ml-1"></i>
             </a>
+            {% endunless %}
           </div>
 
           <!-- LOGIC: Check for Groups first, then Flat items -->
